istiofiles/02.canary.release/03.virtual-service-recommendation-v1_and_v2_25_75.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-vs
spec:
  hosts:
  #This is the service of the recommendation
  - recommendation-svc
  http:
  - route:
    - destination:
        #This is the service of the recommendation
        host: recommendation-svc
        subset: version-v1
      weight: 25
    - destination:
        host: recommendation-svc
        subset: version-v2
      weight: 75
